# tsbk07-project

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md
gameobjects/backwall/: GOTransform.json  Model.json
gameobjects/camera/: Camera.json  GOTransform.json  GameObject.json
gameobjects/camera2/: Model.json
gameobjects/cube/: GOTransform.json  Model.json
gameobjects/floor/: GOTransform.json  Model.json
gameobjects/lamp/: GOTransform.json  Model.json
gameobjects/leftwall/: GOTransform.json  Model.json
gameobjects/linerenderer/: GOTransform.json  GameObject.json
gameobjects/mirror/: GOTransform.json  GameObject.json  Mirror.json  MirrorContainer.json  Model.json
gameobjects/mirror2/: GOTransform.json  GameObject.json  Mirror.json  Model.json
gameobjects/plate/: GOTransform.json  Model.json
gameobjects/rightwall/: GOTransform.json  Model.json
gameobjects/shadermanager/: GOTransform.json  GameObject.json  ShaderManager.json
gameobjects/test/: Camera.json  Component.json  GOTransform.json  GameObject.json  Model.json  ModelAndShader.json
include/: Component.h  ComponentFactory.h  GL_utilities.h  GameObject.h
include/components/: Camera.h  GOTransform.h  LineRenderer.h  LitMaterial.h  Mirror.h  MirrorContainer.h  Model.h  ModelAndShader.h  PointLight.h  RadiosityLight.h  ShaderManager.h
include/core/: BaseComponent.h  Camera.h  CatSpline.h  Color.h  Component.h  Context.h  FBOManager.h  GOTransform.h  Game.h  GameObject.h  Input.h  JSONLoader.h  ModelAndShader.h  Patch.h  Radiosity.h  RaycastMesh.h  ShaderLoader.h  Transform.h
include/utils/: JSONLoader.h  VectorUtils3.h  loadobj.h
json-templates/: GOTransform.json  GameObject.json
src/: Component.cpp  ComponentFactory.cpp  GameObject.cpp  main.cpp
src/components/: Camera.cpp  GOTransform.cpp  LineRenderer.cpp  LitMaterial.cpp  Mirror.cpp  MirrorContainer.cpp  Model.cpp  ModelAndShader.cpp  PointLight.cpp  RadiosityLight.cpp  ShaderManager.cpp
src/core/: BaseComponent.cpp  Camera.cpp  CatSpline.cpp  Color.cpp  Component.cpp  FBOManager.cpp  GOTransform.cpp  Game.cpp  GameObject.cpp  Input.cpp  JSONLoader.cpp  ModelAndShader.cpp  Patch.cpp  Radiosity.cpp  RaycastMesh.cpp  ShaderLoader.cpp  Transform.cpp
src/shaders/: FragmentShader.glsl  VertexShader.glsl  invertcolor.frag  invertcolor.vert  lab1-1.frag  lab1-1.vert  mirror.frag  mirror.vert  radiosity.vert  texture.frag  texture.vert
src/utils/: GL_utilities.c  JSONLoader.cpp  VectorUtils3.c  loadobj.c
